camel-reactive-stream: cleanup